# ArucoUnityPlugin

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: ArucoUnityPluginConfig.cmake
include/: aruco_unity_plugin.hpp
include/aruco_unity_plugin/: board.hpp  charuco_board.hpp  detector_parameters.hpp  dictionary.hpp  grid_board.hpp
include/aruco_unity_plugin/cv/: calib3d.hpp  ccalib.hpp  core.hpp  exception.hpp  imgproc.hpp  mat.hpp  point2f.hpp  point3f.hpp  rect.hpp  scalar.hpp  size.hpp  term_criteria.hpp  vec3d.hpp  vec4i.hpp
include/aruco_unity_plugin/std/: vector_double.hpp  vector_int.hpp  vector_mat.hpp  vector_point2f.hpp  vector_point3f.hpp  vector_vec3d.hpp  vector_vec4i.hpp  vector_vector_int.hpp  vector_vector_point2f.hpp  vector_vector_point3f.hpp  vector_vector_vector_point2f.hpp
src/: aruco_unity_plugin.cpp  board.cpp  calib3d.cpp  ccalib.cpp  charuco_board.cpp  core.cpp  detector_parameters.cpp  dictionary.cpp  exception.cpp  grid_board.cpp  imgproc.cpp  mat.cpp  point2f.cpp  point3f.cpp  rect.cpp  scalar.cpp  size.cpp  term_criteria.cpp  vec3d.cpp  vec4i.cpp  vector_double.cpp  vector_int.cpp  vector_mat.cpp  vector_point2f.cpp  vector_point3f.cpp  vector_vec3d.cpp  vector_vec4i.cpp  vector_vector_int.cpp  vector_vector_point2f.cpp  vector_vector_point3f.cpp  vector_vector_vector_point2f.cpp
